# blender_csv_import

./: .gitignore  README.md  __init__.py  blender_manifest.toml  build.py  data_california_housing_normalized.csv  debugging_notebook.ipynb  export_csv.ipynb  polars_mesh.py  pyproject.toml
.github/workflows/: release.yml  tests.yml  upload.yml
csv-importer/: __init__.py  blender_manifest.toml  csv.py  ops.py
csv_importer/: __init__.py  addon.py  blender_manifest.toml  csv.py  exporters.py  ops.py  parsers.py  props.py  ui.py
demo_blender_files/: current_node_tree_set_strings.blend  example_file_california_bounding_box.blend
docs/demo_blender_files/: german_city.blend  json_3d_array_dino_star.blend  monkey_appear_tutorial_file.blend  monkey_appear_with_strings.blend  monkey_safari.csv  monkey_safari_with_names.csv  string_processing_switch_index.blend
docs/generate_data/: dino_star_vectors.parquet  generate_big_dataset.ipynb  normalised_caifornia.ipynb
docs/sample_datasets/: data_california_housing_normalized.csv
egypt_data/: egypt.ipynb
generate_data/: deno_csv_star_mix.blend  deno_star.ipynb  dino_star_vectors.json  example_file_california_bounding_box.blend  example_file_california_bounding_box.blend1
generate_data/Snowflakes/: generate_snowflake.ipynb  two_snowflakes_matched.json
sample_datasets/: dino_star_vectors_3d_vector.json  sample_data.json
tests/: conftest.py  test_addon.py  test_csv.py  test_parsers.py  test_reload.py
tests/data/: deno_star_elemens.csv  example_string.csv  missing_string.csv
world_pop_data/: egypt.ipynb  maxval.blend  world_population.blend
