[project]
name = "blender-csv-importer"
version = "0.0.1"
description = "A CSV importer for the 3D animation software Blender"
readme = "README.md"
dependencies = ["databpy", "polars>=0.19.1,<0.20.0"]
requires-python = "~=3.11.0"
keywords = ["blender", "python", "numpy"]
maintainers = [
    {name="Brady Johnston", email="brady.johnston@me.com"},
    ]

[project.urls]
# Homepage = "https://bradyajohnston.github.io/databpy"
Repository = "https://github.com/bradyajohnston/databpy"
Dcumentation = "https://bradyajohnston.github.io/databpy"

[project.optional-dependencies]
bpy = ["bpy>=4.2"]
test = ["pytest", "pytest-cov", "syrupy", "polars"]
dev = ["fake-bpy-module", "polars"]
docs = ["quartodoc", "jupyter", "polars"]


