[project]
name = "csv_importer"
version = "0.0.1" # project is not on PyPI, so this is just a placeholder.The real version is defined in blender_manifest.toml
description = "A CSV importer for the 3D animation software Blender"
readme = "README.md"
dependencies = ["databpy", "polars>=0.19.0"]
requires-python = "~=3.11.0"
keywords = ["blender", "python", "numpy"]
maintainers = [
    {name="Jan-Hendrik Müller", email="jan-hendrik.mueller@uni-goettingen.de"},
    ]

[project.urls]
Homepage = "https://extensions.blender.org/add-ons/csv-importer/"
Repository = "https://github.com/kolibril13/blender_csv_import"
# Documentation = "https://kolibril13.github.io/blender_csv_import"

[project.optional-dependencies]
bpy = ["bpy>=4.2"]
test = ["pytest", "pytest-cov"]
dev = ["fake-bpy-module", "tomlkit"]
docs = ["jupyter"]


[tool.coverage.report]
fail_under = 80